@@ -1,3 +1,7 @@
+2011-10-09 Roman
+- DB.PostgreSQL: TIMESTAMP place for DateTimeDec integer type is fixed.
+
+
 2011-10-07 Roman
 - UI.VCAEngine: Document generation repeat limit for primitive "Document" is set to time limit 5s.
 
